--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,16 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  background-color: #0d3213;
+}
 .App {
   width: 100%;
   height: 100vh;
 
-  background-color: #0d3213;
+  font-family: "Nanum Pen Script";
 
-  font-family: "Nanum Pen Script", cursive;
-
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .h4 {
@@ -34,7 +34,6 @@
   height: 100%;
 }
 .nameRickandMorty {
-  margin: 10px;
   text-align: center;
 }
 .nameRickandMorty img {
@@ -44,17 +43,14 @@
 /* input */
 .containerInputId {
   width: 100%;
-
-  padding: 20px;
-  top: 22%;
-
-  position: absolute;
+  margin: 10px 0;
 
   display: flex;
   justify-content: center;
 }
 .inputId {
-  width: 400px;
+  width: 40%;
+  min-width: 250px;
   height: 30px;
 
   text-decoration: none;
@@ -76,6 +72,8 @@ input:focus {
 .containerLocation {
   width: 100%;
 
+  margin-top: 10px;
+
   display: flex;
   justify-content: center;
 
@@ -84,17 +82,10 @@ input:focus {
   -webkit-text-fill-color: transparent;
 }
 .infoLocation {
-  width: 80%;
   max-width: 1000px;
   height: 150px;
-
+  text-align: center;
   padding: 10px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
- 
 }
 .descriptionLocation {
   width: 100%;
@@ -109,12 +100,8 @@ input:focus {
 }
 
 /* card */
-
 .ResidentList {
   width: 100%;
-
-  padding: 10px;
-  margin: 10px 0;
 
   display: flex;
   justify-content: center;
@@ -135,6 +122,18 @@ input:focus {
   position: relative;
 
   border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.containerCard:hover {
+  width: 280px;
+  height: 420px;
+
+  transition-property: left, top, height, width;
+  transition-duration: 0.3s;
 }
 .containerImg {
   width: 250px;
@@ -165,7 +164,7 @@ input:focus {
   font-size: 1rem;
 
   background-color: rgba(128, 128, 128, 0.442);
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -177,7 +176,6 @@ input:focus {
   margin: 5px;
 
   border-radius: 100%;
-  
 }
 .containerDescriptionPerson {
   display: flex;
@@ -195,9 +193,31 @@ input:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 .icon {
   font-size: 1.3rem;
 }
+/* count poblation */
 
+.containerCountPoblation {
+  text-align: center;
+
+  font-size: 3.3rem;
+  background: -webkit-linear-gradient(#e7fb9a, #0e843f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* ------------------------------------------------------------------------------- */
+
+@media (min-width: 500px) {
+  .infoLocation {
+    width: 80%;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+  }
+}
